fully working database connection

--- a/untitled1/src/main/resources/application.properties
+++ b/untitled1/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/weddingdb
-venue.api.url=http://venue-service-url
-catering.api.url=http://catering-service-url
-photographer.api.url=http://photographer-service-url
-spring.security.oauth2.client.registration.auth0.client-id=your-client-id
-spring.security.oauth2.client.registration.auth0.client-secret=your-client-secret
-spring.security.oauth2.client.provider.auth0.issuer-uri=https://your-auth0-domain/
+# Azure SQL Database Configuration
+spring.datasource.url=jdbc:sqlserver://ranger789.database.windows.net:1433;database=ds-project;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=logmaster 
+spring.datasource.password=123qweasdzxc?
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Hibernate properties for SQL Server (optional, but good practice)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+# Or for more recent SQL Server versions (check compatibility with your Azure SQL version)
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+# If you had ddl-auto set for MySQL, adjust for SQL Server if needed
+# spring.jpa.hibernate.ddl-auto=update # or none, create, create-drop
