fully working project locally with Venue service

--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # If you had ddl-auto set for MySQL, adjust for SQL Server if needed
 # spring.jpa.hibernate.ddl-auto=update # or none, create, create-drop
-
+spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 venue.api.url=http://localhost:8081
 
