--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -12,12 +12,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 # If you had ddl-auto set for MySQL, adjust for SQL Server if needed
 # spring.jpa.hibernate.ddl-auto=update # or none, create, create-drop
 spring.jpa.hibernate.ddl-auto=update
-
+# T
 server.port=8082
 venue.api.url=http://localhost:8081
+photographer.api.url=http://localhost:8083
 
 venue.service.api.base-url=http://localhost:8081/venues
-photographer.api.url=http://localhost:8083
+photographer.service.api.base-url=http://localhost:8083/photographers
 
 spring.security.oauth2.client.registration.auth0.client-id=3l1q7YZkjt5ovNKTPmTwvY49FoBnsp6Z
 spring.security.oauth2.client.registration.auth0.client-secret=jIxxoZcc-RcGWFCIHBh2dgIoRVIeN3UPq9DdDQvy3S9by2hgtdBfacQ4z0gKD1Xj
@@ -27,3 +28,4 @@ spring.security.oauth2.client.registration.auth0.scope=openid,profile,email,offl
 logging.level.org.springframework.security=DEBUG
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
+
