--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -15,9 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8082
 venue.api.url=http://localhost:8081
+photographer.api.url=http://localhost:8083
 
 venue.service.api.base-url=http://localhost:8081/venues
-photographer.api.url=http://localhost:8083
+photographer.service.api.base-url=http://localhost:8083/photographers
 
 spring.security.oauth2.client.registration.auth0.client-id=3l1q7YZkjt5ovNKTPmTwvY49FoBnsp6Z
 spring.security.oauth2.client.registration.auth0.client-secret=jIxxoZcc-RcGWFCIHBh2dgIoRVIeN3UPq9DdDQvy3S9by2hgtdBfacQ4z0gKD1Xj
