Wokring log in and log out of main home page, still need to fix /manager/orders

--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -27,5 +27,7 @@ spring.security.oauth2.client.registration.auth0.scope=openid,profile,email,offl
 
 logging.level.org.springframework.security=DEBUG
 
+spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8082/login/oauth2/code/auth0
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
 
