--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -24,10 +24,8 @@ spring.security.oauth2.client.registration.auth0.client-id=3l1q7YZkjt5ovNKTPmTwv
 spring.security.oauth2.client.registration.auth0.client-secret=jIxxoZcc-RcGWFCIHBh2dgIoRVIeN3UPq9DdDQvy3S9by2hgtdBfacQ4z0gKD1Xj
 spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email,offline_access
-
+# ADD THIS LINE:
+spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8082/login/oauth2/code/{registrationId}
 logging.level.org.springframework.security=DEBUG
 
-spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8082/login/oauth2/code/auth0
-
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
-
