Add CateringClient and model to the broker

--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 venue.api.url=http://localhost:8081
 photographer.api.url=http://localhost:8083
+catering.api.url=http://localhost:8084
 
 venue.service.api.base-url=http://localhost:8081/venues
 photographer.service.api.base-url=http://localhost:8083/photographers
