--- a/venue-service/venue-service/src/main/resources/application.properties
+++ b/venue-service/venue-service/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # JPA/Hibernate properties
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
