integrating with the catering

--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -20,6 +20,7 @@ catering.api.url=http://localhost:8084
 
 venue.service.api.base-url=http://localhost:8081/venues
 photographer.service.api.base-url=http://localhost:8083/photographers
+catering.service.api.base-url = http://localhost:8084/catering
 
 spring.security.oauth2.client.registration.auth0.client-id=3l1q7YZkjt5ovNKTPmTwvY49FoBnsp6Z
 spring.security.oauth2.client.registration.auth0.client-secret=jIxxoZcc-RcGWFCIHBh2dgIoRVIeN3UPq9DdDQvy3S9by2hgtdBfacQ4z0gKD1Xj
