Fuly working Email Verifier

--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Azure SQL Database Configuration
-spring.datasource.url=jdbc:sqlserver://ranger789.database.windows.net:1433;database=ds-project;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://ranger789.database.windows.net:1433;database=Broker_DB;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=logmaster
 spring.datasource.password=123qweasdzxc?
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -31,3 +31,16 @@ spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8
 logging.level.org.springframework.security=DEBUG
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
+
+
+# Gmail SMTP Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kianmask94@gmail.com
+spring.mail.password=twbx mgpz rvxd iouz    
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.test-connection=false
+# spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2 # Often not needed, but can be uncommented if issues
+# spring.mail.properties.mail.smtp.debug=true # Uncomment for detailed mail logs during development
