--- a/venue-service/venue-service/src/main/resources/application.properties
+++ b/venue-service/venue-service/src/main/resources/application.properties
@@ -2,14 +2,13 @@ spring.application.name=venue-service
 server.port=8081
 
 # Azure MySQL Database Configuration
-spring.datasource.url=jdbc:sqlserver://ranger789.database.windows.net:1433;database=Venue;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=logmaster
-spring.datasource.password=123qweasdzxc?
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:mysql://venueservice.mysql.database.azure.com:3306/venue?encrypt=true&trustServerCertificate=false&loginTimeout=30
+spring.datasource.username=venueadmin
+spring.datasource.password=personpass123**
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
