still on the work

--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -44,3 +44,19 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.test-connection=false
 # spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2 # Often not needed, but can be uncommented if issues
 # spring.mail.properties.mail.smtp.debug=true # Uncomment for detailed mail logs during development
+
+
+# ---------- RabbitMQ ----------
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wedding
+spring.rabbitmq.password=secret
+
+# Logical names (easy to override per env)
+broker.order.exchange=order.exchange
+broker.order.queue=order.created
+broker.order.routingKey=order.created
+
+broker.cancel.exchange=order.cancel.exchange
+broker.cancel.queue=order.cancel
+broker.cancel.routingKey=order.cancel
