--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 # T
 server.port=8082
-venue.api.url=http://localhost:8081
-photographer.api.url=http://localhost:8083
-catering.api.url=http://localhost:8084
+venue.api.url=https://venue.redcoast-bdc01b8b.uaenorth.azurecontainerapps.io
+photographer.api.url=https://photographerapp.livelygrass-73057c9b.westus.azurecontainerapps.io/
+catering.api.url=https://catering.proudmoss-0c05a610.ukwest.azurecontainerapps.io
 
-venue.service.api.base-url=http://localhost:8081/venues
-photographer.service.api.base-url=http://localhost:8083/photographers
-catering.service.api.base-url = http://localhost:8084/catering
+venue.service.api.base-url=https://venue.redcoast-bdc01b8b.uaenorth.azurecontainerapps.io/venues
+photographer.service.api.base-url=https://photographerapp.livelygrass-73057c9b.westus.azurecontainerapps.io//photographers
+catering.service.api.base-url=https://catering.proudmoss-0c05a610.ukwest.azurecontainerapps.io/catering
 
 spring.security.oauth2.client.registration.auth0.client-id=3l1q7YZkjt5ovNKTPmTwvY49FoBnsp6Z
 spring.security.oauth2.client.registration.auth0.client-secret=jIxxoZcc-RcGWFCIHBh2dgIoRVIeN3UPq9DdDQvy3S9by2hgtdBfacQ4z0gKD1Xj
