--- a/Broker/src/main/resources/application.properties
+++ b/Broker/src/main/resources/application.properties
@@ -1,25 +1,22 @@
 # Azure SQL Database Configuration
-spring.datasource.url=jdbc:sqlserver://ranger789.database.windows.net:1433;database=Broker_DB;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:mysql://ds-broker.mysql.database.azure.com:3306/broker?encrypt=true&trustServerCertificate=false&loginTimeout=30
 spring.datasource.username=logmaster
 spring.datasource.password=123qweasdzxc?
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate properties for SQL Server (optional, but good practice)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-# Or for more recent SQL Server versions (check compatibility with your Azure SQL version)
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# If you had ddl-auto set for MySQL, adjust for SQL Server if needed
-# spring.jpa.hibernate.ddl-auto=update # or none, create, create-drop
+# JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
-# T
-server.port=8082
+spring.jpa.show-sql=true
+
+server.port=8080
 venue.api.url=https://venue.redcoast-bdc01b8b.uaenorth.azurecontainerapps.io
-photographer.api.url=https://photographerapp.livelygrass-73057c9b.westus.azurecontainerapps.io/
+photographer.api.url=https://photographerapp.livelygrass-73057c9b.westus.azurecontainerapps.io
 catering.api.url=https://catering.proudmoss-0c05a610.ukwest.azurecontainerapps.io
 
 venue.service.api.base-url=https://venue.redcoast-bdc01b8b.uaenorth.azurecontainerapps.io/venues
-photographer.service.api.base-url=https://photographerapp.livelygrass-73057c9b.westus.azurecontainerapps.io//photographers
+photographer.service.api.base-url=https://photographerapp.livelygrass-73057c9b.westus.azurecontainerapps.io/photographers
 catering.service.api.base-url=https://catering.proudmoss-0c05a610.ukwest.azurecontainerapps.io/catering
 
 spring.security.oauth2.client.registration.auth0.client-id=3l1q7YZkjt5ovNKTPmTwvY49FoBnsp6Z
@@ -27,7 +24,7 @@ spring.security.oauth2.client.registration.auth0.client-secret=jIxxoZcc-RcGWFCIH
 spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email,offline_access
 # ADD THIS LINE:
-spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8082/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.auth0.redirect-uri=https://broker.purplemushroom-69ff1346.francecentral.azurecontainerapps.io/login/oauth2/code/{registrationId}
 logging.level.org.springframework.security=DEBUG
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-wp007rs3cttz1vdb.us.auth0.com/
@@ -37,7 +34,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-wp007rs3cttz1vd
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kianmask94@gmail.com
-spring.mail.password=twbx mgpz rvxd iouz    
+spring.mail.password=twbx mgpz rvxd iouz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
